--- a/css/tufte_pandoc_compat.css
+++ b/css/tufte_pandoc_compat.css
@@ -3,5 +3,5 @@ section.level1, section.level3, section.level4, section.level5, section.level6 {
 }
 
 span.marginnote code, span.sidenote code {
-	font-size: 0.9rem;
+	font-size: 0.85rem;
 }
